<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidDomInspection -->
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@android:color/white"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
            app:statusBarScrim="@android:color/white"
            app:titleEnabled="false">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/image_12"
                app:layout_collapseMode="parallax" />


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:clipToPadding="false"
        android:scrollbars="none"
        android:scrollingCache="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_large">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:text="Best Value"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                android:textColor="@color/grey_90"
                app:fontFamily="sans-serif-medium" />

            <View
                android:layout_marginLeft="30dp"
                android:layout_width="80dp"
                android:layout_height="2dp"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_medium"
                android:background="@color/orange_400" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="make partial deposit to get great value on foodstaff items "
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@color/blacklight" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/spacing_middle"
                android:layout_marginTop="@dimen/spacing_large"
                android:background="@color/grey_10" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_middle"
                    android:layout_marginRight="@dimen/spacing_middle"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">




                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/grey_5" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/spacing_large"
                            android:layout_marginRight="@dimen/spacing_large"
                            android:clickable="true"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:scaleType="centerCrop"
                                app:srcCompat="@drawable/image_shop_2" />

                            <View
                                android:layout_width="@dimen/spacing_middle"
                                android:layout_height="0dp" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal">

                                    <LinearLayout
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:orientation="vertical">

                                        <TextView
                                            android:id="@+id/textView"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_marginTop="@dimen/spacing_xmedium"
                                            android:text="@string/pembe_maize_meal"
                                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                            android:textColor="@color/grey_90" />

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_marginTop="@dimen/spacing_medium"
                                            android:text="@string/_2_kgs"
                                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                            android:textColor="@color/grey_60" />

                                    </LinearLayout>


                                    <ImageButton
                                        android:layout_width="wrap_content"
                                        android:layout_height="37dp"
                                        android:background="?attr/selectableItemBackgroundBorderless"
                                        android:tint="@color/green"
                                        app:srcCompat="@drawable/ic_verified"
                                        tools:ignore="VectorDrawableCompat"
                                        android:contentDescription="TODO" />

                                    <View
                                        android:layout_width="@dimen/spacing_small"
                                        android:layout_height="0dp" />

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="5dp"
                                    android:gravity="center_vertical"
                                    android:orientation="horizontal">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/kes_500"
                                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                        android:textColor="@color/light_green_600" />

                                </LinearLayout>


                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="5dp"
                                    android:gravity="center_vertical"
                                    android:orientation="horizontal">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/qty_10"
                                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                        android:textColor="@color/grey_60" />

                                    <View
                                        android:layout_width="0dp"
                                        android:layout_height="0dp"
                                        android:layout_weight="1" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/kes_5000"
                                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                        android:textColor="@color/light_green_700"
                                        android:textStyle="bold" />

                                    <View
                                        android:layout_width="@dimen/spacing_middle"
                                        android:layout_height="0dp" />

                                </LinearLayout>

                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatRatingBar
                                style="@style/Yellow.Small.AppCompatRatingBar"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:clickable="false"
                                android:numStars="5"
                                android:rating="3.5"
                                android:stepSize="1"
                                android:layout_marginLeft="20dp"
                                android:theme="@style/Yellow.Small.AppCompatRatingBar"
                                android:layout_marginStart="20dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/spacing_medium"
                                android:layout_marginStart="@dimen/spacing_medium"
                                android:text="@string/_381_380"
                                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                                android:textColor="@color/grey_40" />

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/spacing_middle"
                android:layout_marginTop="@dimen/spacing_middle"
                android:background="@color/grey_10" />

            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="@dimen/spacing_xxlarge"
                    android:background="@drawable/gd"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/spacing_middle"
                    android:paddingRight="@dimen/spacing_middle">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/total"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/white"
                        android:layout_marginStart="10dp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kes_8_000"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <LinearLayout
                    android:layout_marginLeft="10dp"
                    android:layout_width="150dp"
                    android:layout_height="@dimen/spacing_xxlarge"
                    android:background="@drawable/gd"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/spacing_middle"
                    android:paddingRight="@dimen/spacing_middle"
                    android:layout_marginStart="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_to_cart"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/white" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_height="@dimen/spacing_xlarge"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:tint="@color/white"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_cart_add_shopping"
                        tools:ignore="VectorDrawableCompat" />


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>